--- a/action.yml
+++ b/action.yml
@@ -475,25 +475,33 @@ runs:
 
                 rsync -a ./ "$OUTER_BUILD_DIR/" "${EXCLUDES[@]}"
 
-                echo "Contents of OUTER_BUILD_DIR before zipping/upload:"
+                echo "Contents of OUTER_BUILD_DIR before artifact upload:"
                 ls -l "$OUTER_BUILD_DIR"
+                echo "package_path=$OUTER_BUILD_DIR" >> $GITHUB_OUTPUT
 
-                # Create the extension zip for both artifact and release
-                cd "$OUTER_BUILD_DIR"
-                zip -r "${EXTENSION_NAME}_${VERSION}.zip" .
-                cd -
-                echo "package_zip=$OUTER_BUILD_DIR/${EXTENSION_NAME}_${VERSION}.zip" >> $GITHUB_OUTPUT
-
-                # Generate directory tree from OUTER_BUILD_DIR
-                if [ -n "${{ inputs.dir-tree-file }}" ]; then
-                  DIR_TREE_PATH="$OUTER_BUILD_DIR/${{ inputs.dir-tree-file }}"
-                  if command -v tree &> /dev/null; then
-                    tree "$OUTER_BUILD_DIR" > "$DIR_TREE_PATH"
-                  else
-                    find "$OUTER_BUILD_DIR" -type f | sort > "$DIR_TREE_PATH"
-                  fi
-                  echo "dir_tree_path=$DIR_TREE_PATH" >> $GITHUB_OUTPUT
+        -   name: Create release zip
+            shell: bash
+            run: |
+                EXTENSION_NAME="${{ steps.extension_details.outputs.extension_name }}"
+                VERSION="${{ steps.set_version.outputs.version }}"
+                if [ -n "$RUNNER_TEMP" ]; then
+                  OUTER_BUILD_DIR="$RUNNER_TEMP/joomla-build-$EXTENSION_NAME-$VERSION"
+                else
+                  OUTER_BUILD_DIR="/tmp/joomla-build-$EXTENSION_NAME-$VERSION"
                 fi
+                cd "$OUTER_BUILD_DIR"
+                zip -r "../${EXTENSION_NAME}_${VERSION}.zip" .
+                cd -
+                echo "release_zip=$OUTER_BUILD_DIR/../${EXTENSION_NAME}_${VERSION}.zip" >> $GITHUB_ENV
+
+        -   name: Upload extension package files
+            if: inputs.upload-artifact == 'true'
+            uses: actions/upload-artifact@v4
+            with:
+                name: ${{ steps.extension_details.outputs.extension_name }}_${{ steps.set_version.outputs.version }}
+                path: ${{ steps.create_package.outputs.package_path }}
+                retention-days: 90
+                if-no-files-found: warn
 
         -   name: Upload extension package zip
             if: inputs.upload-artifact == 'true'
