--- a/action.yml
+++ b/action.yml
@@ -494,7 +494,7 @@ runs:
                 else
                   find "$OUTER_BUILD_DIR" > "$TREE_FILE"
                 fi
-                echo "dir_tree_path=$TREE_FILE" >> $GITHUB_OUTPUT
+                echo "DIR_TREE_PATH=$TREE_FILE" >> $GITHUB_ENV
 
         -   name: Upload extension package files
             if: inputs.upload-artifact == 'true'
@@ -515,25 +515,25 @@ runs:
                 if-no-files-found: warn
 
         -   name: Upload directory tree file
-            if: inputs.upload-artifact == 'true' && steps.dir_tree.outputs.dir_tree_path != ''
+            if: inputs.upload-artifact == 'true' && env.DIR_TREE_PATH != ''
             uses: actions/upload-artifact@v4
             with:
                 name: directory-structure.txt
-                path: ${{ steps.dir_tree.outputs.dir_tree_path }}
+                path: ${{ env.DIR_TREE_PATH }}
                 retention-days: 90
                 if-no-files-found: warn
 
         -   name: Debug directory tree file
             shell: bash
             run: |
-                echo "dir_tree_path: ${{ steps.dir_tree.outputs.dir_tree_path }}"
-                ls -l "${{ steps.dir_tree.outputs.dir_tree_path }}" || echo "File not found"
+                echo "dir_tree_path: ${{ env.DIR_TREE_PATH }}"
+                ls -l "${{ env.DIR_TREE_PATH }}" || echo "File not found"
 
         -   name: Move directory tree file to workspace
-            if: steps.dir_tree.outputs.dir_tree_path != ''
+            if: env.DIR_TREE_PATH != ''
             shell: bash
             run: |
-                cp "${{ steps.dir_tree.outputs.dir_tree_path }}" "./directory-structure.txt"
+                cp "${{ env.DIR_TREE_PATH }}" "./directory-structure.txt"
                 echo "dir_tree_path_ws=$(pwd)/directory-structure.txt" >> $GITHUB_ENV
 
         -   name: Debug tag for release
